welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:15: error: value Yellow is not a member of object java.awt.Color
setCouleurBrosse(Color.Yellow)
                       ^FlowerPot:20: error: not found: value c
setCouleurBrosse(c : Color)
                 ^